--- a/W_UP_01.rmd
+++ b/W_UP_01.rmd
@@ -1,6 +1,6 @@
 ---
 title: "W_UP_01"
-author: "your name here"
+author: "Anjolie Barrios"
 date: "fall 2020"
 output: html_document
 ---
@@ -23,14 +23,18 @@ mydata <- read.csv(file="pushups.csv")
 
 Create an Rstudio project in your shared space on rstudio.cloud.  Using the dataset called pushups from the tigerstats package in R; answer the question posed by this null and alternate hypothesis in an html markdown document.
 
-$H_0$: There is no difference between the average number of pushups of line vs skill players
+$H_0$: There is no difference between the average number of pushups of line vs skill players  
+When L is the average number of pushups of line players and S is the average number of pushups of skill players, L = S.  
 
-$H_A$: The average number of pushups done by line players is statistically different than that of skill players.
+$H_A$: The average number of pushups done by line players is statistically different than that of skill players.  
+When L is the average number of pushups of line players and S is the average number of pushups of skill players, L ≠ S.  
 
 # Methods
 
-<!--Decide on your methods: use "variable analysis" or other appropriate descriptors. Make sure to choose at least one graphical method and at least one numerical method.!-->
-
+<!--Decide on your methods: use "variable analysis" or other appropriate descriptors. Make sure to choose at least one graphical method and at least one numerical method.!--> 
+The type of variable analysis used in this study will be quantitative since it's more concerned with the values (in this case, number of pushups and their relationship with the "position" value) than their meaning or interpretation.  
+While boxplots show medians and IQRs, as opposed to averages,
+  
 # Results
 
 <!--Divide this section into two sub-sections: One for your descriptive results and one for your inferential results.!-->
