--- a/W_UP_01.rmd
+++ b/W_UP_01.rmd
@@ -32,8 +32,7 @@ When L is the average number of pushups of line players and S is the average num
 # Methods
 
 <!--Decide on your methods: use "variable analysis" or other appropriate descriptors. Make sure to choose at least one graphical method and at least one numerical method.!--> 
-The type of variable analysis used in this study will be quantitative since it's more concerned with the values (in this case, number of pushups and their relationship with the "position" value) than their meaning or interpretation.  
-While boxplots show medians and IQRs, as opposed to averages,
+The type of variable analysis used in this study will be quantitative, since the question asked has more to do with the values (in this case, number of pushups and their relationship with the "position" value) than their meaning or interpretation. Pushups are numeric, but position is categorical; therefore, Numeric ~ Categorical will be used.
   
 # Results
 
@@ -42,6 +41,16 @@ While boxplots show medians and IQRs, as opposed to averages,
 ## Descriptive Results
 
 ### Graphical Descriptive Results
+### Plot boxplots
+
+```{r}
+plot(pushups ~ position, data = pushups) %>%
+  abline(h = 49.73, lwd = 2, col = "blue") %>%
+  abline(h = 17.12, lwd = 2, col = "magenta") %>%
+  title(main = "Pushups")
+```
+  
+Note: The blue line is the average pushup count for Skill players. The magenta line is the average pushup count for Line players.  
 
 <!--Graphical results here. Make sure to show your code. Provide appropriate labels for axes, giving units if possible, and provide a good title for the graph, too. Use the graphical results to describe the patterns if any that exist in the data as focused toward the research question!-->
 
@@ -49,10 +58,14 @@ While boxplots show medians and IQRs, as opposed to averages,
 
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
 
+```{r}
+favstats(pushups ~ position, data = pushups) 
+```
+
 ## Inferential Results
 
 <!--State hypothesis clearly. Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc. Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
-
+If skill players' number of pushups are compared to that of line players, then the skill players will, on average, do more pushups. 
 
 # Discussion and Conclusion
 
